@@ -11,3 +11,12 @@
   font-size: 0.8em;
   font-weight: bold;
 }
+
+.student_search_advisee_results {
+  cursor: pointer;
+  font-size: 10pt;
+}
+
+.student_search_advisee_results td {
+  vertical-align: top;
+}
